# insights-pro

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: langgraph-rules.mdc
offline/: metadata_embedding.ipynb  metadata_filtering.py
